Fix loss of focus caused by not going through PresShell::UnsuppressPainting (bug 199927). Also cleaned up event listener registration in this file quite a bit. r=peterl, sr=bzbarsky.